@@ -1,5 +1,5 @@
 % Generated by roxygen2 (4.0.2): do not edit by hand
-\name{makeTuneControlCMAES}
+\name{TuneControl}
 \alias{TuneControl}
 \alias{TuneControlCMAES}
 \alias{TuneControlGenSA}
